--- a/index.html
+++ b/index.html
@@ -5,40 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Solar Panel Monitoring</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav>
+    <ul>
+      <li><a href="#" class="logo">
+        <img src="resource/logo.png" alt="image not found">
+        <span>Solar Panel Monitoring</span>
+      </a></li>
+      <li><a href="home">
+        <i class="material-icons" style="font-size: 36px;">home</i>
+        <span class="nav-item">Home</span>
+      </a></li>
+      <li><a href="Sun_Int">
+        <i class="material-icons" style="font-size: 36px;">brightness_high</i>
+        <span class="nav-item">Sun Intensity</span>
+      </a></li>
+      <li><a href="Temp">
+        <i class="material-icons" style="font-size: 36px;">ac_unit</i>
+        <span class="nav-item">Panel Temperature</span>
+      </a></li>
+      <li><a href="Hum">
+        <i class="material-icons" style="font-size: 36px;">cloud_queue</i>
+        <span class="nav-item">Humidity</span>
+      </a></li>
+      <li><a href="Voltage">
+        <i class="material-icons" style="font-size: 36px;">add_to_queue</i>
+        <span class="nav-item">Voltage</span>
+      </a></li>
+      <li><a href="Current">
+        <i class="material-icons" style="font-size: 36px;">broken_image</i>
+        <span class="nav-item">Current</span>
+      </a></li>
+    </ul>
+  </nav>
 </body>
 </html>
