'fix data dependencies'

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script/index.js"></script>
-  <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> 
-  <script type="text/javascript">
-  </script>
   <title>Solar Monitoring</title>
 </head>
 <body>
 <div id="chartContainer" style="width:100%; height:280px"></div>
+<script src="script/model/class.js"></script>
+<script src="script/model/index.js"></script>
+<script src="script/view/index.js"></script>
+<script src="script/controller/index.js"></script>
+<script src="script/index.js"></script>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> 
 </body>
 </html>
